# py-cg-grants-gov

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: cd-plugin.yml  cd-publish.yml  cd-release.yml  ci-plugin.yml
cg_extension_framework/: __init__.py  cg_config.py
cg_grants_gov/: cg_config.py
examples/: parse.py
plugin/: __init__.py  cg_config.py
tests/: test_opportunity_custom_fields.py
