[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cg-grants-gov"
version = "0.1.0"
description = "CommonGrants custom fields plugin for HHS/grants.gov opportunity data"
packages = [{include = "cg_grants_gov"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
common-grants-sdk = ">=0.6.0"
pydantic = ">=2.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.9"
mypy = "^1.20.0"
pytest = "^9.0.2"

# Makes this package auto-discoverable without any manual registration.
[tool.poetry.plugins."common_grants_sdk.plugins"]
grants_gov = "cg_grants_gov"
